--- a/MyTrade/Views/Admin/Generate_EPin.cshtml
+++ b/MyTrade/Views/Admin/Generate_EPin.cshtml
@@ -77,6 +77,57 @@
                         <input class="btn btn-success" name="btn_Pin" id="btn_Pin" onclick="return validateform()" type="submit" value="Create Pin" />
                      
                     </div>
+                    <div class="widget-content widget-content-area br-6">
+                        <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Login Id</th>
+                                    <th>Name</th>
+                                    <th>E-Pin No</th>
+                                    <th>Package</th>
+                                    <th>Amount</th>
+                                    <th>Status</th>
+                                    <th>Registerd To</th>
+                                    <th>Total Amount</th>
+                                   
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lst != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lst)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.Name</td>
+                                                <td>@Item.ePinNo</td>
+                                                <td>@Item.Package</td>
+                                                <td>@Item.Amount</td>
+                                                <td>@Item.Status</td>
+                                                <td>@Item.ToId</td>
+                                                <td>@Item.TotalAmount</td>
+                                               
+
+                                                @*<td>
+                                        <a href="/AdminProfile/UpdateAssociateProfile?LoginID=@Item.LoginId" class="btn btn-info btn-sm">
+                                            Edit
+                                        </a>
+                                    </td>*@
+                                               
+                                            </tr>
+                                            i++;
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+
                 </div>
             </div>
         </div>
