--- a/MyTrade/Views/Admin/ViewLedger.cshtml
+++ b/MyTrade/Views/Admin/ViewLedger.cshtml
@@ -32,6 +32,7 @@
                                         <th>Narration</th>
                                         <th>Cr Amount</th>
                                         <th>Dr Amount</th>
+                                        <th>Balance</th>
                                         <th>TransactionBy</th>
                                         <th>Transaction No</th>
                                     </tr>
@@ -51,6 +52,7 @@
                                                     <td>@Item.Narration</td>
                                                     <td>@Item.CrAmount</td>
                                                     <td>@Item.DrAmount</td>
+                                                    <td>@Item.Balance</td>
                                                     <td>@Item.TransactionBy</td>
                                                     <td>@Item.TransactionNo</td>
                                                 </tr>
