--- a/MyTrade/Views/Wallet/WalletLedgerList.cshtml
+++ b/MyTrade/Views/Wallet/WalletLedgerList.cshtml
@@ -51,7 +51,7 @@
                                         <th>S No.</th>
                                         <th>Cr Amount</th>
                                         <th>Dr Amount</th>
-                                        @*<th>Balance</th>*@
+                                        <th>Balance</th>
                                         <th>Narration</th>
                                         <th>Date</th>
                                     </tr>
@@ -68,7 +68,7 @@
                                                     <td>@i</td>
                                                     <td>@Item.CrAmount</td>
                                                     <td>@Item.DrAmount</td>
-                                                    @*<td>@Item.Balance</td>*@
+                                                    <td>@Item.Balance</td>
                                                     <td>@Item.Narration</td>
                                                     <td>@Item.TransactionDate</td>
                                                 </tr>
