--- a/MyTrade/Views/Admin/WalletList.cshtml
+++ b/MyTrade/Views/Admin/WalletList.cshtml
@@ -59,8 +59,8 @@
                                     <select id="Status" name="Status" class="form-control">
                                         @*<option value="0">-Select-</option>*@
                                         <option value="Pending">Pending</option>
-                                        <option value="Approved">Approve</option>
-                                        <option value="Declined">Decline</option>
+                                        <option value="Approved">Approved</option>
+                                        <option value="Declined">Declined</option>
                                        
                                     </select>
                                 </div>
@@ -185,9 +185,9 @@
         </div>
     </div>
 }
-@*<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />*@
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
 <script>
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
