--- a/MyTrade/Views/AdminReports/AssociateList.cshtml
+++ b/MyTrade/Views/AdminReports/AssociateList.cshtml
@@ -67,14 +67,20 @@
                                 </div>
                             </div>
                             @*<div class="col-lg-3">
-                                <input type="hidden" id="MStatus" value="@Model.MemberStatus" />
+                                    <input type="hidden" id="MStatus" value="@Model.MemberStatus" />
+                                    <div class="form-group">
+                                        <label>Member Status</label>
+                                  <select id="MemberStatus" name="MemberStatus" class="form-control">
+                                      <option value="0">-Select-</option>
+                                      <option value="P">Active</option>
+                                      <option value="T">In Active</option>
+                                  </select>
+                                    </div>
+                                </div>*@
+                            @*<div class="col-lg-3">
                                 <div class="form-group">
-                                    <label>Member Status</label>
-                              <select id="MemberStatus" name="MemberStatus" class="form-control">
-                                  <option value="0">-Select-</option>
-                                  <option value="P">Active</option>
-                                  <option value="T">In Active</option>
-                              </select>
+                                    <label>Mobile No</label>
+                                    @Html.TextBoxFor(m => m.Mobile, new { @class = "form-control" })
                                 </div>
                             </div>*@
                             <div class="col-lg-3">
@@ -128,11 +134,11 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     <td>@Item.MemberStatus</td>
-                                                    <td>  
+                                                    <td>
                                                         <a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
                                                         @*<a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>*@
                                                         <a href="/AdminReports/DeleteUerDetails?Id=@Item.Fk_UserId" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this user ?');">Delete</a>
-                                                        
+
                                                     </td>
 
                                                     @*<td>
@@ -142,17 +148,17 @@
                                                         </td>*@
                                                     <td>
                                                         @if (Item.isBlocked == "False")
-                                                {
-                                            <a href="/AdminReports/BlockAssociate?LoginID=@Item.LoginId" class="btn btn-danger btn-sm">
-                                                Block
-                                            </a>
-                                                }
-                                                else
-                                                {
-                                            <a href="/AdminReports/UnblockAssociate?LoginID=@Item.LoginId" class="btn btn-success btn-sm">
-                                                Unblock
-                                            </a>
-                                                }
+                                                        {
+                                                            <a href="/AdminReports/BlockAssociate?LoginID=@Item.LoginId" class="btn btn-danger btn-sm">
+                                                                Block
+                                                            </a>
+                                                        }
+                                                        else
+                                                        {
+                                                            <a href="/AdminReports/UnblockAssociate?LoginID=@Item.LoginId" class="btn btn-success btn-sm">
+                                                                Unblock
+                                                            </a>
+                                                        }
                                                     </td>
                                                     <td>
                                                         @if (Item.Status == "Inactive")
@@ -192,8 +198,7 @@
 <script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
 <script>
     debugger;
-    if ($("#MStatus").val()!=0)
-    {
+    if ($("#MStatus").val() != 0) {
         $("#MemberStatus").val($("#MStatus").val()).attr("selected", "selected")
     }
 </script>
