--- a/MyTrade/Views/Admin/SetMenuPermissionForUser.cshtml
+++ b/MyTrade/Views/Admin/SetMenuPermissionForUser.cshtml
@@ -22,38 +22,74 @@
                         </div>
                     </div>
                     <div class="widget-content widget-content-area">
-
-                        <div class="widget-content widget-content-area br-6">
-                            <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Form Name</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
+                        <table id="html5-extension" class="table table-hover non-hover" style="width:100%" data-page-length='20'>
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Form Name</th>
+                                    <th>Status</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstForUserPermission != null)
                                     {
-                                        if (Model.lstForUserPermission != null)
+                                        int i = 1;
+                                        foreach (var Item in Model.lstForUserPermission)
                                         {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstForUserPermission)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.FormName</td>
-                                                        <td>
-                                                            <a href="/Admin/ActiveUser?id=@Item.FormId" class="btn btn-success btn-sm " onclick="return confirm('Are you sure you want to Active this user?') ">Active</a>
-                                                            <a href="/Admin/InActiveUser?id=@Item.FormId" class="btn btn-danger btn-sm " onclick="return confirm('Are you sure you want to In active this user ?') ">In Active</a>
-                                                        </td>
-                                                </tr>
-                                                i++;
-                                            }
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.FormName</td>
+                                                <td>@Item.Permission</td>
+                                                <td>
+                                                    @if (Item.Permission == "Active")
+                                                    {
+                                                        <a href="javascript:void(0)" class="btn btn-danger btn-sm" id="ainactive" onclick="return OpenPopup(@Item.FormId);">In Active</a>
+                                                    }
+                                                    else
+                                                    {
+                                                        <a href="/Admin/ActiveUser?id=@Item.FormId" class="btn btn-success btn-sm ">Active</a>
+                                                    }
+
+
+                                                </td>
+                                            </tr>
+                                            i++;
                                         }
                                     }
-                                </tbody>
-                            </table>
+                                }
+                            </tbody>
+                        </table>
+                        <div class="modal fade md" id="myModal" role="dialog" style="display: none;padding-top:100px;">
+                            <div class="modal-dialog">
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        @*<h6 class="modal-title" style="color: red">Approve</h6>*@
+                                        <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+                                    </div>
+                                    <div class="modal-body" style="color: black">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div class="form-group">
+                                                    <label>Reason</label>
+                                                    @Html.TextBoxFor(m => m.Reason, new { @class = "form-control", @placeholder = "Reason" })
+                                                    @Html.HiddenFor(m => m.FormId)
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6" style="margin-top:30px;">
+                                                <div class="form-group">
+                                                    <input type="submit" class="btn btn-sm btn-success pull-right" id="asubmit" name="btnSubmit" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,9 +98,19 @@
     </div>
 
 }
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<script src="~/MyTradeWebsite/assets/js/jquery.min.js"></script>
+<script>
+    function OpenPopup(id) {
+        debugger;
+        jQuery.noConflict();
+        $("#myModal").modal('show');
+        $("#FormId").val(id);
+    };
+    function closeModal() {
+        jQuery.noConflict();
+        $("#myModal").modal('hide');
+    }
+</script>
 
 
 
