--- a/MyTrade/Views/Admin/TopUp.cshtml
+++ b/MyTrade/Views/Admin/TopUp.cshtml
@@ -47,6 +47,7 @@
                             @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
                             <span style="color:red">Min  : <span id="spfrom"></span> </span><span style="color:red;padding-left:50px"> Max : <span id="spto"></span> </span><span style="color:red;padding-left:50px"> In Multiple Of : <span id="spmul"></span></span>
                             <input type="hidden" value="@ViewBag.ToAmount" id="hdfMax" />
+                            <input type="hidden" id="hdfMin" />
                         </div>
                     </div>
                     @*<div class="row mb-4">
@@ -183,7 +184,19 @@
                 }
                 else if (parseInt(Amount) > parseInt($("#hdfMax").val())) {
                     Snackbar.show({
-                        text: "Amount should not be greater than max smount",
+                        text: "Amount should not be greater than max amount",
+                        actionTextColor: '#fff',
+                        backgroundColor: '#e7515a',
+                        pos: 'top-right'
+                    });
+                    $("#Amount").addClass('errortext');
+                    $('#Amount').focus();
+                    $("#Amount").val('');
+                    return false;
+                }
+                else if (parseInt(Amount) < parseInt($("#hdfMin").val())) {
+                    Snackbar.show({
+                        text: "Amount should not be less than min amount",
                         actionTextColor: '#fff',
                         backgroundColor: '#e7515a',
                         pos: 'top-right'
@@ -295,6 +308,7 @@
                     $("#spto").text(data.ToAmount);
                     $("#spmul").text(data.InMultipleOf);
                     $("#hdfMax").val(data.ToAmount);
+                    $("#hdfMin").val(data.FromAmount);
                 }
                 else  {
                     $("#PackageId").val('0')
