--- a/MyTrade/Views/AdminReports/TopupReport.cshtml
+++ b/MyTrade/Views/AdminReports/TopupReport.cshtml
@@ -73,6 +73,7 @@
                                         <th>TPS Percentage</th>
                                         <th>Days</th>
                                         <th>Date</th>
+                                        @*<th>Action</th>*@
                                         @*<th>Upgradation Date</th>
                                         <th>Payment Mode</th>
                                             <th>Description</th>
@@ -101,6 +102,7 @@
                                                     <td>@Item.ROIPercentage %</td>
                                                     <td><a class="btn btn-info btn-sm" href="/Admin/ViewROIForAdmin?Id=@Item.Pk_investmentId&UserId=@Item.Fk_UserId">@Item.PackageDays</a></td>
                                                     <td>@Item.TopUpDate</td>
+                                                    @*<td><a class="btn btn-info btn-sm" href="/AdminReports/DeleteTopUp?Id=@Item.Pk_investmentId">Delete</a></td>*@
                                                     @*<td>@Item.UpgradtionDate</td>
                                                     <td>@Item.PaymentMode</td>
                                                         <td>@Item.Description</td>
