--- a/MyTrade/Views/User/TopUp.cshtml
+++ b/MyTrade/Views/User/TopUp.cshtml
@@ -36,6 +36,7 @@
                                     <a class="btn btn-primary" style="float: right;" href="/Wallet/AddWallet">Add Fund</a>
                                 }
                                 <input type="hidden" id="hdf" value="@ViewBag.Status" />
+                                <input type="hidden" id="hdfReason" value="@ViewBag.Reason" />
                             </div>
                         </div>
                         <div class="row mb-4">
@@ -57,6 +58,7 @@
                                 @Html.TextBoxFor(m => m.Amount, new { @class = "form-control", @placeholder = "Amount", @onkeypress = "return isNumberKey(event);", @onchange = "return CheckAmount();" })
                                 <span style="color:red">Min  : <span id="spfrom"></span> </span><span style="color:red;padding-left:50px"> Max : <span id="spto"></span> </span><span style="color:red;padding-left:50px"> In Multiple Of : <span id="spmul"></span></span>
                                 <input type="hidden" value="@ViewBag.ToAmount" id="hdfMax" />
+                                <input type="hidden" id="hdfMin" />
                             </div>
                         </div>
                         @*<div class="row mb-4">
@@ -217,6 +219,18 @@
                     $("#Amount").val('');
                     return false;
                 }
+                else if (parseInt(Amount) < parseInt($("#hdfMin").val())) {
+                    Snackbar.show({
+                        text: "Amount should not be less than min amount",
+                        actionTextColor: '#fff',
+                        backgroundColor: '#e7515a',
+                        pos: 'top-right'
+                    });
+                    $("#Amount").addClass('errortext');
+                    $('#Amount').focus();
+                    $("#Amount").val('');
+                    return false;
+                }
                 else {
                 }
             }
@@ -343,6 +357,7 @@
                     $("#spto").text(data.ToAmount);
                     $("#spmul").text(data.InMultipleOf);
                     $("#hdfMax").val(data.ToAmount);
+                    $("#hdfMin").val(data.FromAmount);
                 }
                 else {
                     $("#PackageId").val('0')
@@ -389,7 +404,7 @@
                 backdrop: true,
                 allowOutsideClick: false,
                 title: 'Warning!',
-                text: 'This page is currently closed.',
+                text: '@ViewBag.Reason',
                 type: 'warning',
                 showCancelButton: 0,
                 confirmButtonText: 'OK',
